# spellbook-py

./: .env-default  .gitignore  README.md  pyproject.toml
src/spellbook-py/: __init__.py  python_bookmarks.ipynb  python_bookmarks.py
